--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,9 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [workspaces/CSC134/STELLAR_RIM' does not exist
+    "configurations": [
+        
+        workspaces/CSC134/STELLAR_RIM' does not exist
         
 
     ]
